# SnakeNeuroEvolution

./: .gitmodules  CMakeLists.txt  README.md
SnakeNeuroEvolution/: CMakeLists.txt
SnakeNeuroEvolution/Engine/Headers/: Engine.hpp  Entity.hpp  GUI.hpp  GeneticAlgorithm.hpp  Logger.hpp  NeuralNetwork.hpp  Population.hpp  Seed.hpp  Settings.hpp  Text.hpp  pch.hpp
SnakeNeuroEvolution/Engine/Source/: Engine.cpp  Entity.cpp  GUI.cpp  GeneticAlgorithm.cpp  Logger.cpp  NeuralNetwork.cpp  Population.cpp  Seed.cpp  Text.cpp
SnakeNeuroEvolution/Engine/Src/: Entity.cpp  GeneticAlgorithm.cpp  NeuralNetwork.cpp  main.cpp  pch.cpp
SnakeNeuroEvolution/Game/Headers/: Wrapper.hpp
SnakeNeuroEvolution/Game/Source/: Wrapper.cpp  main.cpp
SnakeNeuroEvolution/TopEntityWeights/: TopSnake(14x14).csv  TopSnake(16x16).csv  TopSnake.csv
SnakeNeuroEvolution/Wrapper/Headers/: Wrapper.hpp
SnakeNeuroEvolution/Wrapper/Source/: Wrapper.cpp  main.cpp
